Closed Bug 296102 Opened 21 years ago Closed 21 years ago

Venkman fails to start in Deer Park Alpha 1 after 5/27/2005

Categories

(Other Applications Graveyard :: Venkman JS Debugger, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bc, Assigned: benjamin)

References

Details

Attachments

(1 file)

When ever I try to start a previous installation of Venkman in Deer Park Alpha 1 on 5/30 or 5/31 builds, Venkman fails to start. Afterwards the Firefox process will not exit when the browser is exited. The maxVersion in Venkman's latest XPI install.rdf is 1.1 which would appear to be sufficient. Note that manually changing the maxVersion from 1.1 to 1.0+ in the XPI and reinstalling venkman did not fix the problem. I successfully successfully installed venkman into a 5/27 debug build.
WORKSFORME with Venkman 0.9.85 from http://www.hacksrus.com/~ginda/venkman/ and trunk Firefox dated 31st (Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2) Gecko/20050531 Firefox/1.0+).
I get "No chrome package registered for chrome://communicator/content/contentAreaUtils.js ." Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050531 Firefox/1.0+ Venkman 0.9.5
Whiteboard: [WFM]
Just to make things clear, I can't reproduce this at all - clean profile or not, it all works perfectly. From what's been said on IRC, it is clear what is happening is a window is starting to open (which causes FF to not exit properly) but not finishing and becoming visible. This has been known to be caused by XML errors, I believe, but without any real substance to this bug it's hard to say...
I was able to get the venkman window to open (although in a very broken state) by ripping out all the seamonkey stuff/communicator stuff.
(In reply to comment #4) > I was able to get the venkman window to open (although in a very broken state) > by ripping out all the seamonkey stuff/communicator stuff. is it possible to fix this and make a new .xpi ? thanks
*** Bug 297353 has been marked as a duplicate of this bug. ***
Random musing: this is actually as much a bug in chromeregistry/somewhere else as it is Venkman. The "chrome package" error (or any other XUL/overlay error) should never cause this half-open window thing. Good thing no-one's claiming our platform is ready...
Removing the following lines: http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/extensions/venkman/resources/content/venkman-scripts.xul&mark=57-59#50 "fixes" this for Firefox. As mentioned in earlier comments, this is a clearly not a specific Venkman issue.
Whiteboard: [WFM]
Assignee: rginda → benjamin
Status: NEW → ASSIGNED
Attachment #187861 - Flags: superreview?(jst)
Attachment #187861 - Flags: review?(jst)
(In reply to comment #9) > Created an attachment (id=187861) [edit] > If we can't load a <xul:script>, don't barf, rev. 1 > I've tested this patch just now with a venkman version that was downloaded from http://www.hacksrus.com/~ginda/venkman/ and had its maxVersion changed to 1.0+ and it works! The JS Console still outputs the missing chrome packages, but venkman shows up properly.
Comment on attachment 187861 [details] [diff] [review] If we can't load a <xul:script>, don't barf, rev. 1 r+sr=jst
Attachment #187861 - Flags: superreview?(jst)
Attachment #187861 - Flags: superreview+
Attachment #187861 - Flags: review?(jst)
Attachment #187861 - Flags: review+
Attachment #187861 - Flags: approval1.8b3?
Attachment #187861 - Flags: approval1.8b3? → approval1.8b3+
Checked in for 1.8b3, and marking FIXED. Please reopen if there is further work needed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Verified with Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b2) Gecko/20050705 Firefox/1.0+
Status: RESOLVED → VERIFIED
Product: Other Applications → Other Applications Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: