Bug 296102 - If a <xul:script src="chrome://missing-package/content/file.js" /> cannot be loaded, don't leave the window in an unopened zombie state, r+sr=jst a=asa